# powertrain

./: Hall_Speed_Mode_and_PWM_Control.txt  Odrive_configuration_power_supply_V1.py  README.md  neodrive.code-workspace  platformio.ini
CAN/: can_config.txt
CAN/arduino_can_sender/: arduino_can_sender.ino
CAN/esp32_twai_sender/: esp32_twai_sender.ino
Documentation/: Hall_Speed_Mode_and_PWM_Control.txt  Sensorless_Speed_Mode.txt  sensorless_config.txt
GUI/: live_plotter.py  live_plotter_v2.py  serial_plotter_fast.py
GUI/serial_plotter_wasm/: .gitignore  CMakeLists.txt  README.md  build.ps1  serve.py
GUI/serial_plotter_wasm/build-desktop/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake  selftest.txt
GUI/serial_plotter_wasm/build-desktop/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
GUI/serial_plotter_wasm/build-desktop/serial_plotter_wasm_autogen/: deps  mocs_compilation.cpp
GUI/serial_plotter_wasm/build-desktop/serial_plotter_wasm_autogen/UVLADIE3JM/: moc_demosource.cpp  moc_demosource.cpp.d  moc_plotwindow.cpp  moc_plotwindow.cpp.d  moc_serialbridge.cpp  moc_serialbridge.cpp.d
GUI/serial_plotter_wasm/src/: demosource.cpp  demosource.h  main.cpp  plotwindow.cpp  plotwindow.h  serialbridge.cpp  serialbridge.h  telemetry.h
Neodrive_test/: platformio.ini
Neodrive_test/include/: board_config.h
Neodrive_test/lib/odrive_can/: odrive_can.cpp  odrive_can.h
Neodrive_test/src/: main.cpp
Neodrive_test/test/: test_PID_speed_config.cc  test_driver_on.cc  test_encodeur.cc  test_sensorless.cc  test_speed_close_loop.cc  test_torque_close_loop.cc
can_utilities/src/: main.cpp
can_utilities/test/: can_listenner.cc  full.cc  pot.cc
docs/: Calibration.md  Getting_Started.md
docs/images/: README.md
docs/plotter/: index.html  serial_plotter_wasm.js
include/: STM32FreeRTOSConfig.h  board_config.h
lib/drv8301/: drv8301.cpp  drv8301.h
lib/odrive_can/: odrive_can.cpp  odrive_can.h
src/: HallSensorSmoothVel.h  main.cpp
test/: full.cc  test_PID_speed_config.cc  test_can.cc  test_driver_on.cc  test_encodeur.cc  test_sensorless.cc  test_speed_close_loop.cc  test_torque_close_loop.cc
